--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: KENGXKENG의 블로그
-description: ✨ 나의 개발 같은 마법 일기 ✨
+description: ✨ Unity에서는 마법이 당신을 개발합니다. 그렇지 않은 사람들은 모두 죽었거든요. ✨
 theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
