--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
+# 이렇게 정리!
 title: KENGXKENG의 블로그
 description: ✨ Unity에서는 마법이 당신을 개발합니다. 그렇지 않은 사람들은 모두 죽었거든요. ✨
-theme: jekyll-theme-cayman
+theme: minima
 plugins:
   - jekyll-feed
-theme: minima
